<?xml version="1.0" encoding="utf-8"?>
<!-- ListView的头部 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_list_bg_black" >
    <!-- 内容 -->
    <RelativeLayout
        android:id="@+id/PullsFreshLVRL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp" >
        <!-- 箭头图像、进度条 -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >

            <!-- 箭头 -->

            <ImageView
                android:id="@+id/PullsFreshLVArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/common_description"
                android:src="@drawable/common_list_refresh_header_arrow" />

            <!-- 进度条 -->

            <ProgressBar
                android:id="@+id/PullsFreshLVProgressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <!-- 提示、最近更新 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <!-- 提示 -->

            <TextView
                android:id="@+id/PullsFreshLVClewNextPullsFresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_refresh_splite_page_lv_next_pulls_fresh_clew"
                android:textColor="@color/common_list_bg_white"
                android:textSize="20sp" />

            <!-- 最近更新 -->

            <TextView
                android:id="@+id/PullsFreshLVClewPreviousFresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_refresh_splite_page_lv_previous_time_fresh_clew"
                android:textColor="@color/common_list_bg_gold"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>